# fastapi_mongo_crud_example

./: .env.example  .gitignore  Dockerfile  Makefile  logger_config.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
docker/: .docker.env  app-compose.yml  dev-compose.yml  docker-compose.app.dev.yml  docker-compose.app.yml  docker-compose.mongo.yml  docker-compose.postgres.yml  docker-compose.proxy.yml  docker-compose.yml  mongo-compose.yml
src/: config.py  container.py  database.py  dependencies.py  dto.py  lifespan.py  logger.py  logging.py  main.py  models.py  mongo.py  schemas.py
src/items/: dependencies.py  dto.py  exceptions.py  models.py  repository.py  schemas.py  service.py  service_exc.py  views.py
src/mongo/: __init__.py  base_repository.py  client.py  config.py  dependencies.py  object_id.py  utils.py
src/repositories/: items.py
src/repositories/base/: base_mongo_repository.py  base_sqlalchemy_repository.py  items.py  mongo_repository.py  repository.py  sqlalchemy_repository.py
tests/: base_fake_repo.py  conftest.py  test_base_sqlalchemy_repository.py
tests/test_items/: conftest.py  fake_repository.py  test_create.py  test_delete.py  test_get.py  test_patch.py  test_service.py
