[tool.poetry]
name = "fastapi-mongo-crud-example"
version = "0.1.0"
description = ""
authors = ["theandrunique <theandrunique@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.4.0"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.2"
structlog = "^24.1.0"
punq = "^0.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
beanie = "^1.26.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
pytest = "^8.1.1"
pyright = "^1.1.362"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]

pythonVersion = "3.12"
pythonPlatform = "Linux"
